-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.2
-
None
NetworkManager backend is half baked in regards to mobile data connections.
1) it doesn't return proper Bearer type.
2) doesn't respond to changes in modem properties.
3) ... something I have yet to find out
For Gerrit Dashboard: QTBUG-41807 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
96501,2 | Add better mobile connections to QtBearer NetworkManager backend. | 5.3 | qt/qtbase | Status: ABANDONED | +2 | 0 |
97217,1 | Add better mobile connections to QtBearer NetworkManager backend. | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |