Add better mobile connections to QtBearer NetworkManager backend.

Task-number: QTBUG-41807

Change-Id: Ifb5904d4887111416b4bb1a32d6d056029186f5c
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>